# toolx

./: .gitignore  Cargo.toml  Justfile  README.md  pyproject.toml
.github/workflows/: release.yml  update_registry.yml
docs/simple/: index.html
docs/simple/toolx/: index.html
scripts/: generate_registry.py
src/: lib.rs
src/toolx/: __init__.py  __main__.py  _core.pyi
templates/: package_index.html.jinja2  root_index.html.jinja2
