[project]
name = "toolx"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "renardeinside", email = "polarpersonal@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
toolx = "toolx:main"

[tool.maturin]
module-name = "toolx._core"
python-packages = ["toolx"]
python-source = "src"

[tool.setuptools_scm]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0", "setuptools-scm"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "setuptools-scm>=9.2.2",
]
